tests/rosetta/out/Java/conditional-structures-1.error
parse: error[P001]: /workspace/mochi/tests/rosetta/x/Mochi/conditional-structures-1.mochi:7:1: unexpected token "}" (expected "{" Statement* "}" (("else" IfStmt) | ("else" "{" Statement* "}"))?)
  --> /workspace/mochi/tests/rosetta/x/Mochi/conditional-structures-1.mochi:7:1

  7 | }
    | ^

help:
  Check for a missing `{` or `}` to close the block.